@@ -30,6 +30,9 @@ bool CoreInitialConditions::reset()
   initialconditions_data.clear();
   displacement_data.clear();
   temperature_data.clear();
+  stress_data.clear();
+  stress_element_data.clear();
+  stress_block_data.clear();
   
   init();
   return true;
@@ -85,6 +88,18 @@ bool CoreInitialConditions::create_initialcondition(std::vector<std::string> opt
       sub_id = std::stoi(temperature_data[sub_last][0]) + 1;
     }
     this->add_temperature(std::to_string(sub_id));
+  }else if (initialcondition_type == 3)
+  { // stress
+    if (temperature_data.size()==0)
+    {
+      sub_id = 1;
+    }
+    else
+    {
+      sub_last = int(stress_data.size()) - 1;
+      sub_id = stress_data[sub_last] + 1;
+    }
+    this->add_stress(sub_id);
   }
   
   this->add_initialcondition(initialcondition_id, initialcondition_type, sub_id);
@@ -126,6 +141,27 @@ bool CoreInitialConditions::modify_initialcondition(int initialcondition_id, int
   }
 }
 
+bool CoreInitialConditions::add_initialcondition_stress(int initialcondition_id, int modify_type, std::vector<double> options)
+{
+  int sub_data_id;
+  int initialconditions_data_id = get_initialconditions_data_id_from_initialcondition_id(initialcondition_id);
+
+  if (initialconditions_data_id == -1)
+  {
+    return false;
+  } else {
+    // element
+    if ((initialconditions_data[initialconditions_data_id][1]==3) && (modify_type==1))
+    {
+      this->add_stress_element(double(initialconditions_data[initialconditions_data_id][2]), options[0], options[1], options[2], options[3], options[4], options[5], options[6], options[7]);
+    } else if ((initialconditions_data[initialconditions_data_id][1]==3) && (modify_type==1))
+    {
+      this->add_stress_block(double(initialconditions_data[initialconditions_data_id][2]), options[0], options[1], options[2], options[3], options[4], options[5], options[6]);
+    }
+    return true;
+  }
+}  
+
 bool CoreInitialConditions::add_initialcondition(int initialcondition_id, int initialcondition_type, int initialcondition_type_id)
 {
   std::vector<int> v = {initialcondition_id, initialcondition_type, initialcondition_type_id};
@@ -153,9 +189,35 @@ bool CoreInitialConditions::add_temperature(std::string temperature_id)
   return true;
 }
 
+bool CoreInitialConditions::add_stress(int stress_id)
+{
+  stress_data.push_back(stress_id);
+  
+  return true;
+}
+
+bool CoreInitialConditions::add_stress_element(double stress_id, double element_id, double ip, double sxx, double syy, double szz, double sxy, double sxz, double syz)
+{
+  std::vector<double> v = {stress_id, element_id, ip, sxx, syy, szz, sxy, sxz, syz};
+  
+  stress_element_data.push_back(v);
+  
+  return true;  
+}
+
+bool CoreInitialConditions::add_stress_block(double stress_id, double block_id, double sxx, double syy, double szz, double sxy, double sxz, double syz)
+{
+  std::vector<double> v = {stress_id, block_id, sxx, syy, szz, sxy, sxz, syz};
+  
+  stress_block_data.push_back(v);
+  
+  return true;  
+}
+
 bool CoreInitialConditions::delete_initialcondition(int initialcondition_id)
 {
   int sub_data_id;
+  std::vector<int> sub_data_ids;
   int initialconditions_data_id = get_initialconditions_data_id_from_initialcondition_id(initialcondition_id);
   if (initialconditions_data_id == -1)
   {
@@ -172,6 +234,22 @@ bool CoreInitialConditions::delete_initialcondition(int initialcondition_id)
       sub_data_id = get_temperature_data_id_from_temperature_id(initialconditions_data[initialconditions_data_id][2]);
       if (sub_data_id != -1){
         temperature_data.erase(temperature_data.begin() + sub_data_id);  
+      }
+    }else if (initialconditions_data[initialconditions_data_id][1]==3)
+    {
+      sub_data_ids = get_stress_element_data_ids_from_stress_id(initialconditions_data[initialconditions_data_id][2]);
+      for (size_t i = sub_data_ids.size(); i > 0; i--)
+      {
+        stress_element_data.erase(stress_element_data.begin() + sub_data_ids[i-1]);
+      }
+      sub_data_ids = get_stress_block_data_ids_from_stress_id(initialconditions_data[initialconditions_data_id][2]);
+      for (size_t i = sub_data_ids.size(); i > 0; i--)
+      {
+        stress_block_data.erase(stress_block_data.begin() + sub_data_ids[i-1]);
+      }
+      sub_data_id = get_stress_data_id_from_stress_id(initialconditions_data[initialconditions_data_id][2]);
+      if (sub_data_id != -1){
+        stress_data.erase(stress_data.begin() + sub_data_id);  
       }
     }
     initialconditions_data.erase(initialconditions_data.begin() + initialconditions_data_id);
@@ -218,6 +296,49 @@ int CoreInitialConditions::get_temperature_data_id_from_temperature_id(int tempe
   return return_int;
 }
 
+int CoreInitialConditions::get_stress_data_id_from_stress_id(int stress_id)
+{ 
+  int return_int = -1;
+  for (size_t i = 0; i < stress_data.size(); i++)
+  {
+    if (stress_data[i]==stress_id)
+    {
+        return_int = int(i);
+    }  
+  }
+  return return_int;
+}
+
+std::vector<int> CoreInitialConditions::get_stress_element_data_ids_from_stress_id(int stress_id)
+{ 
+  std::vector<int> return_int;
+
+  for (size_t i = 0; i < stress_element_data.size(); i++)
+  {
+    if (stress_element_data[i][0]==double(stress_id))
+    {
+        return_int.push_back(int(i));
+    }  
+  }
+  
+  return return_int;
+}
+
+std::vector<int> CoreInitialConditions::get_stress_block_data_ids_from_stress_id(int stress_id)
+{ 
+  std::vector<int> return_int;
+
+  for (size_t i = 0; i < stress_block_data.size(); i++)
+  {
+    if (stress_block_data[i][0]==double(stress_id))
+    {
+        return_int.push_back(int(i));
+    }  
+  }
+  
+  return return_int;
+}
+
 std::string CoreInitialConditions::print_data()
 {
   std::string str_return;
@@ -243,6 +364,38 @@ std::string CoreInitialConditions::print_data()
   for (size_t i = 0; i < temperature_data.size(); i++)
   {
     str_return.append(temperature_data[i][0] + " " + temperature_data[i][1] + " \n");
+  }
+
+  str_return.append("\n CoreInitialConditions stress_data: \n");
+  str_return.append("stress_id \n");
+
+  for (size_t i = 0; i < stress_data.size(); i++)
+  {
+    str_return.append(std::to_string(stress_data[i]) + " \n");
+  }
+
+  str_return.append("\n CoreInitialConditions stress_element_data: \n");
+  str_return.append("stress_id, element_id, ip, sxx, syy, szz, sxy, sxz, syz \n");
+
+  for (size_t i = 0; i < stress_element_data.size(); i++)
+  {
+    for (size_t ii = 0; ii < stress_element_data[i].size(); ii++)
+    {
+      str_return.append(std::to_string(stress_element_data[i][ii]) + ",");
+    }
+    str_return.append(" \n");
+  }
+
+  str_return.append("\n CoreInitialConditions stress_block_data: \n");
+  str_return.append("stress_id, block_id, sxx, syy, szz, sxy, sxz, syz \n");
+
+  for (size_t i = 0; i < stress_block_data.size(); i++)
+  {
+    for (size_t ii = 0; ii < stress_block_data[i].size(); ii++)
+    {
+      str_return.append(std::to_string(stress_block_data[i][ii]) + ",");
+    }
+    str_return.append(" \n");
   }
 
   return str_return;
