@@ -134,3 +134,5 @@
 2025-02-15 working on draw surface traction and equation
 2025-02-15 added gui for surface traction and equation
 2025-02-16 working on section print
+2025-02-17 working on initial condition stress
+
